# PanTompkinsQRS

./: .clang-format  meson.build  panTompkins.c  panTompkins.h
